<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/nomtitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/fiche_compl_te_du_pays"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <ImageView
        android:id="@+id/flagImageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:maxWidth="200dp" />

    <TextView
        android:id="@+id/nameCommonTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/nameOfficielTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/nom_officiel"
        android:padding="6dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:id="@+id/capitalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/capital"
        android:padding="6dp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:id="@+id/regionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/region"
        android:padding="6dp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:id="@+id/subregionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/sous_region"
        android:padding="6dp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/langue"
        android:padding="6dp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:id="@+id/populationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/population"
        android:padding="6dp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:id="@+id/monnaieTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/monnaie"
        android:padding="6dp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:id="@+id/areaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/superficie"
        android:padding="6dp"
        android:textColor="@color/secondaryTextColor"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>